feat(tokenizer): add shebang token

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@yakanet/vaderlang",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "build": "bun build src/index.ts --compile --outfile=vader"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
