--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "binaryen": "^122.0.0",
     "codemirror": "^6.0.1"
   }
