--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
     "binaryen": "^122.0.0",
+    "binaryen-gc": "^0.1.2",
     "codemirror": "^6.0.1"
   }
 }
