--- a/editors/.vscode/launch.json
+++ b/editors/.vscode/launch.json
@@ -11,7 +11,8 @@
 			"request": "launch",
 			"args": [
 				"${workspaceFolder}/..",
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--disable-extensions"
 			]
 		}
 	]
