fix: vscode extension packaging

--- a/editors/.vscodeignore
+++ b/editors/.vscodeignore
@@ -1,4 +1,6 @@
 .vscode/**
 .vscode-test/**
 .gitignore
-vsc-extension-quickstart.md
+packages/**
+!packages/**/out/*.js
+node_modules/@vaderlang/**
