--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -2,19 +2,18 @@
   "compilerOptions": {
     // Enable latest features
     "lib": [
-      "ESNext",
-      "DOM"
+      "ESNext"
     ],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
     "allowJs": true,
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
+    "declaration": true,
     // Best practices
     "strict": true,
     "skipLibCheck": true,
@@ -22,11 +21,6 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "paths": {
-      "@vader/compiler/*": [
-        "./src/*"
-      ]
-    }
+    "noPropertyAccessFromIndexSignature": false
   }
 }
