--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,22 +1,23 @@
 {
   "name": "@vaderlang/compiler",
-  "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "bun run build:windows-x64 && bun run build:darwin-arm64",
-    "watch": "bun build src/index.cts --format=cjs --watch --packages=external --outdir=build",
-    "build:base": "bun build src/index.ts --compile --outfile=../../dist/bin/${BINARY_NAME}",
-    "build:windows-x64": "BINARY_NAME=vader-win-64 bun run build:base --target=bun-windows-x64",
-    "build:darwin-arm64": "BINARY_NAME=vader-darwin-arm64 bun run build:base --target=bun-darwin-arm64",
+    "build": "bun run build:esm && bun run build:types",
+    "build:cjs": "bun build src/index.ts --target=node --format=cjs --outfile=build/index.cjs",
+    "build:esm": "bun build src/index.ts --target=node --format=esm --outfile=build/index.mjs",
+    "build:types": "tsc --emitDeclarationOnly",
+    "bundle": "bun run bundle:windows-x64 && bun run bundle:darwin-arm64",
+    "bundle:base": "bun build src/main.ts --compile --outfile=../../dist/bin/${BINARY_NAME}",
+    "bundle:windows-x64": "BINARY_NAME=vader-win-64 bun run bundle:base --target=bun-windows-x64",
+    "bundle:darwin-arm64": "BINARY_NAME=vader-darwin-arm64 bun run bundle:base --target=bun-darwin-arm64",
     "test": "bun test"
   },
-  "exports": {
-    "./*": {
-      "import": "./src/*"
-    }
-  },
+  "types": "./build/types/index.d.ts",
+  "main": "./build/index.mjs",
+  "module": "./build/index.mjs",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
