--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -7,9 +7,9 @@
     "build:esm": "bun build src/index.ts --target=node --format=esm --outfile=build/index.mjs",
     "build:types": "tsc --emitDeclarationOnly",
     "bundle": "bun run bundle:windows-x64 && bun run bundle:darwin-arm64",
-    "bundle:base": "bun build src/main.ts --compile --outfile=../../dist/bin/${BINARY_NAME}",
-    "bundle:windows-x64": "BINARY_NAME=vader-win-64 bun run bundle:base --target=bun-windows-x64",
-    "bundle:darwin-arm64": "BINARY_NAME=vader-darwin-arm64 bun run bundle:base --target=bun-darwin-arm64",
+    "bundle:base": "bun build src/main.ts --compile",
+    "bundle:windows-x64": "bun run bundle:base --target=bun-windows-x64 --outfile=../../dist/bin/vader-win64",
+    "bundle:darwin-arm64": "bun run bundle:base --target=bun-darwin-arm64 --outfile=../../dist/bin/vader-arm64",
     "test": "bun test"
   },
   "types": "./build/types/index.d.ts",
